--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev:all": "concurrently \"bun dev\" && \"ngrok http --url=rested-redbird-trivially.ngrok-free.app 80\"",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -40,9 +41,12 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@trpc/client": "^11.0.0-rc.828",
-    "@trpc/server": "^11.0.0-rc.828",
+    "@tanstack/react-query": "^5.68.0",
+    "@trpc/client": "^11.0.0-rc.833",
+    "@trpc/react-query": "^11.0.0-rc.833",
+    "@trpc/server": "^11.0.0-rc.833",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "concurrently": "^9.1.2",
@@ -60,6 +64,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "svix": "^1.61.4",
     "tailwind-merge": "^3.0.2",
