--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "shadadd": "bunx shadcn@2.1.8 add"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.5",
+    "@clerk/nextjs": "^6.12.6",
     "@hookform/resolvers": "^4.1.3",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -42,9 +42,9 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.69.0",
-    "@trpc/client": "^11.0.0-rc.833",
-    "@trpc/react-query": "^11.0.0-rc.833",
-    "@trpc/server": "^11.0.0-rc.833",
+    "@trpc/client": "^11.0.0-rc.840",
+    "@trpc/react-query": "^11.0.0-rc.840",
+    "@trpc/server": "^11.0.0-rc.840",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.5",
     "class-variance-authority": "^0.7.1",
@@ -60,6 +60,7 @@
     "lucide-react": "^0.479.0",
     "next": "15.1.6",
     "next-themes": "^0.4.6",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
@@ -79,7 +80,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
     "@types/node": "^20.17.24",
-    "@types/react": "^19.0.11",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.22.0",
@@ -88,5 +89,8 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
-  }
+  },
+  "trustedDependencies": [
+    "@clerk/shared"
+  ]
 }
