--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "shadadd": "bunx shadcn@2.1.8 add"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.6",
+    "@clerk/nextjs": "^6.12.8",
     "@hookform/resolvers": "^4.1.3",
     "@mux/mux-node": "^10.1.0",
+    "@mux/mux-player-react": "^3.3.0",
     "@mux/mux-uploader-react": "^1.1.2",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -44,11 +45,11 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.69.0",
-    "@trpc/client": "^11.0.0-rc.840",
-    "@trpc/react-query": "^11.0.0-rc.840",
-    "@trpc/server": "^11.0.0-rc.840",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
     "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.34.5",
+    "@upstash/redis": "^1.34.6",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -57,10 +58,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "0.39.0",
+    "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
-    "next": "^15.3.0-canary.18",
+    "next": "^15.3.0-canary.19",
     "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
@@ -80,12 +82,12 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@types/node": "^20.17.24",
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "^20.17.25",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "drizzle-kit": "^0.30.5",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
