--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@uploadthing/react": "^7.3.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
+    "@upstash/workflow": "^0.2.12",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
@@ -63,7 +64,7 @@
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
-    "next": "^15.3.0-canary.20",
+    "next": "^15.3.0-canary.21",
     "next-themes": "^0.4.6",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
